# FractaVista

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
assets/shaders/: BurningShip.glsl  CubicMandelbrot.glsl  Feather.glsl  FractalCommon.glsl  Julia.glsl  MainShader.glsl  Mandelbrot.glsl  Newton.glsl
cmake/: Config.cmake.in
config/: FractaVista_UI.ini
shaders/compute/: BurningShip.glsl  FractalCommon.glsl  Julia.glsl  MainShader.glsl  Mandelbrot.glsl  Newton.glsl  Tricorn.glsl
src/: main.cpp
src/app/: Application.cpp  Application.hpp
src/core/: InputHandler.cpp  InputHandler.hpp  Window.cpp  Window.hpp
src/fractal/: BurningShip.cpp  BurningShip.hpp  CubicMandelbrot.cpp  CubicMandelbrot.hpp  FractalComputer.cpp  FractalComputer.hpp  FractalDefinition.hpp  FractalManager.cpp  FractalManager.hpp  FractalState.hpp  FractalType.hpp  FractalTypes.hpp  IFractal.hpp  Julia.cpp  Julia.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Newton.cpp  Newton.hpp  Tricorn.cpp  Tricorn.hpp
src/gfx/: QuadRenderer.cpp  QuadRenderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/ui/: CameraController.cpp  CameraController.hpp  Icons.hpp  Theme.cpp  Theme.hpp  UIManager.cpp  UIManager.hpp  UIState.hpp
src/util/: FileUtils.hpp  JsonUtils.hpp  Logger.cpp  Logger.hpp  PlatformUtils.hpp
src/utils/: Logger.hpp
